--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,9 @@ jobs:
         echo Add other actions to build,
         echo test, and deploy your project.
 
+  upload:
+    name: upload file
+    runs-on: ubuntu-latest
     steps:
 
     # artifactのアップロード
